# robotics_for_developers

./: mountsandisk.sh  notes.md  rebuild.sh
r4d_1_single_marker/: CMakeLists.txt  README.md  package.xml  rebuild.sh
r4d_1_single_marker/include/r4d_1_single_marker/: SingleMarkerLocalizer.h
r4d_1_single_marker/launch/: eval.launch
r4d_1_single_marker/scripts/: apriltag.py  plot.py  process_rosbag.py  test.py
r4d_2_multimarker/: CMakeLists.txt
r4d_2_multimarker/launch/: eval.launch
r4d_2_multimarker/scripts/: plot.py  plot_solve_time.py
r4d_3_imu/: CMakeLists.txt
r4d_common/: CMakeLists.txt  package.xml
r4d_common/include/r4d_common/: BagRunner.h  MarkerFactor.h  gtsam_opencv_interop.h  ros_opencv_interop.h
r4d_common/src/r4d_common/: plot_tools.py
rcars_detector_msgs/msg/: Tag.msg
